@@ -773,11 +773,11 @@ public class BlockingQueueManager extends BaseManager {
     }
 
     class BQ {
-        final List<ScheduledAction> offerWaitList = new ArrayList<ScheduledAction>(1000);
-        final List<ScheduledAction> pollWaitList = new ArrayList<ScheduledAction>(1000);
-        final List<Lease> leases = new ArrayList<Lease>(1000);
-        final Set<Data> keys = new HashSet<Data>(1000);
+        final LinkedList<ScheduledAction> offerWaitList = new LinkedList<ScheduledAction>();
+        final LinkedList<ScheduledAction> pollWaitList = new LinkedList<ScheduledAction>();
+        final LinkedList<Lease> leases = new LinkedList<Lease>();
         final LinkedList<QData> queue = new LinkedList<QData>();
+        final Set<Data> keys = new HashSet<Data>(1000);
         final int maxSizePerJVM;
         final long ttl;
         final String name;
@@ -858,10 +858,10 @@ public class BlockingQueueManager extends BaseManager {
         void doAddKey(Data key, int index) {
             if (keys.add(key)) {
                 if (leases.size() > 0) {
-                    leases.remove(0);
+                    leases.removeFirst();
                 }
                 if (index == Integer.MAX_VALUE || index >= queue.size()) {
-                    queue.offer(new QData(key));
+                    queue.add(new QData(key));
                 } else if (index == 0) {
                     queue.addFirst(new QData(key));
                 } else {
@@ -891,9 +891,10 @@ public class BlockingQueueManager extends BaseManager {
 
         void takeOne() {
             while (pollWaitList.size() > 0) {
-                ScheduledAction scheduledActionPoll = pollWaitList.remove(0);
+                ScheduledAction scheduledActionPoll = pollWaitList.removeFirst();
                 if (!scheduledActionPoll.expired() && scheduledActionPoll.isValid()) {
                     scheduledActionPoll.consume();
+                    node.clusterManager.deregisterScheduledAction(scheduledActionPoll);
                     return;
                 }
             }
@@ -901,9 +902,10 @@ public class BlockingQueueManager extends BaseManager {
 
         void offerOne() {
             while (offerWaitList.size() > 0) {
-                ScheduledAction scheduledActionOffer = offerWaitList.remove(0);
+                ScheduledAction scheduledActionOffer = offerWaitList.removeFirst();
                 if (!scheduledActionOffer.expired() && scheduledActionOffer.isValid()) {
                     scheduledActionOffer.consume();
+                    node.clusterManager.deregisterScheduledAction(scheduledActionOffer);
                     return;
                 }
             }
